bindings/c/whiteout_textures.h

/* ── Opaque handles ───────────────────────────────────────── */

typedef struct whiteout_Texture whiteout_Texture;
typedef struct whiteout_PngApngFrameInfo whiteout_PngApngFrameInfo;
typedef struct whiteout_PngParser whiteout_PngParser;
typedef struct whiteout_PngApngFrame whiteout_PngApngFrame;
typedef struct whiteout_PngApngSaveOptions whiteout_PngApngSaveOptions;
typedef struct whiteout_PngWriter whiteout_PngWriter;
typedef struct whiteout_JpegParser whiteout_JpegParser;
typedef struct whiteout_JpegWriter whiteout_JpegWriter;
typedef struct whiteout_DdsParser whiteout_DdsParser;
typedef struct whiteout_DdsWriter whiteout_DdsWriter;
typedef struct whiteout_BmpParser whiteout_BmpParser;
typedef struct whiteout_BmpWriter whiteout_BmpWriter;
typedef struct whiteout_TgaParser whiteout_TgaParser;
typedef struct whiteout_TgaWriter whiteout_TgaWriter;
/* ── PngParser ─────────────────────────────────────────────── */

/* Reads a PNG file or byte buffer and decodes it into a Texture. */
/*  */
/* Animated PNG (APNG) is supported: `parse()` still returns the single default image, while the animation frames are exposed via `isAnimated()`, `frameCount()`, `frame()`, `frameDelayMs()` and `frameInfo()`. */
whiteout_PngParser* whiteout_textures_PngParser_new(void);
void whiteout_textures_PngParser_delete(whiteout_PngParser* self);
/* Parse a PNG byte buffer. */
struct whiteout_Texture* whiteout_textures_PngParser_parse(whiteout_PngParser* self, const uint8_t* buffer, size_t buffer_size);
/* @return true if the last parse produced any issues. */
int32_t whiteout_textures_PngParser_hasIssues(const whiteout_PngParser* self);
/* @return true if the last parsed PNG carried APNG animation chunks. */
int32_t whiteout_textures_PngParser_isAnimated(const whiteout_PngParser* self);
/* @return number of animation frames (0 when not animated). */
uint32_t whiteout_textures_PngParser_frameCount(const whiteout_PngParser* self);
/* @return APNG loop count from the `acTL` chunk; 0 means loop forever. */
uint32_t whiteout_textures_PngParser_loopCount(const whiteout_PngParser* self);
/* @return animation frame @p index, fully composited to the canvas size as an RGBA8 texture. In lenient mode an out-of-range index yields an empty texture; in strict mode it throws. @param index Zero-based frame index. */
struct whiteout_Texture* whiteout_textures_PngParser_frame(const whiteout_PngParser* self, uint32_t index);
/* @return display duration of frame @p index in milliseconds. @param index Zero-based frame index. */
uint32_t whiteout_textures_PngParser_frameDelayMs(const whiteout_PngParser* self, uint32_t index);
/* @return raw per-frame metadata for frame @p index. @param index Zero-based frame index. */
struct whiteout_PngApngFrameInfo* whiteout_textures_PngParser_frameInfo(const whiteout_PngParser* self, uint32_t index);
/* ── PngApngFrame ─────────────────────────────────────────────── */

/* One frame of an animated PNG (APNG), with its display duration. */
whiteout_PngApngFrame* whiteout_textures_PngApngFrame_new(void);
void whiteout_textures_PngApngFrame_delete(whiteout_PngApngFrame* self);
/* Full-canvas frame image (converted to RGBA8 on write). */
whiteout_Texture* whiteout_textures_PngApngFrame_get_image(whiteout_PngApngFrame* self);
void whiteout_textures_PngApngFrame_set_image(whiteout_PngApngFrame* self, const whiteout_Texture* value);
/* Display duration in milliseconds. */
uint32_t whiteout_textures_PngApngFrame_get_delayMs(const whiteout_PngApngFrame* self);
void whiteout_textures_PngApngFrame_set_delayMs(whiteout_PngApngFrame* self, uint32_t value);
/* ── PngApngSaveOptions ─────────────────────────────────────────────── */

/* Options controlling animated PNG (APNG) encoding. */
whiteout_PngApngSaveOptions* whiteout_textures_PngApngSaveOptions_new(void);
void whiteout_textures_PngApngSaveOptions_delete(whiteout_PngApngSaveOptions* self);
/* Number of times to loop; 0 means loop forever. */
uint32_t whiteout_textures_PngApngSaveOptions_get_loopCount(const whiteout_PngApngSaveOptions* self);
void whiteout_textures_PngApngSaveOptions_set_loopCount(whiteout_PngApngSaveOptions* self, uint32_t value);
/* ── PngWriter ─────────────────────────────────────────────── */

/* Encodes a Texture into PNG format. */
/*  */
/* In addition to single-image PNG, the writer can emit an animated PNG (APNG) from a sequence of frames via `writeAnimated()`. Each frame is written full-canvas with no inter-frame optimisation. */
whiteout_PngWriter* whiteout_textures_PngWriter_new(void);
void whiteout_textures_PngWriter_delete(whiteout_PngWriter* self);
/* Serialize the texture to a PNG byte buffer. */
whiteout_Bytes whiteout_textures_PngWriter_write(whiteout_PngWriter* self, struct whiteout_Texture* texture);
/* Serialize a sequence of frames into an animated PNG (APNG) byte buffer. */
/*  */
/* All frames must share the same dimensions (frame 0 defines the canvas). Each frame is emitted full-canvas with disposal NONE and blend SOURCE. Returns an empty buffer on failure (lenient mode). @param frames Ordered animation frames; must be non-empty. @param opts   Encoding options (loop count). */
whiteout_Bytes whiteout_textures_PngWriter_writeAnimated(whiteout_PngWriter* self, const struct whiteout_PngApngFrame* const* frames, size_t frames_size, struct whiteout_PngApngSaveOptions* opts);
/* @return true if the last write produced any issues. */
int32_t whiteout_textures_PngWriter_hasIssues(const whiteout_PngWriter* self);
/* ── JpegParser ─────────────────────────────────────────────── */

/* Reads a JPEG file or byte buffer and decodes it into a Texture. */
whiteout_JpegParser* whiteout_textures_JpegParser_new(void);
whiteout_JpegParser* whiteout_textures_JpegParser_new_pool(void* pool);
void whiteout_textures_JpegParser_delete(whiteout_JpegParser* self);
/* Parse a JPEG byte buffer. */
struct whiteout_Texture* whiteout_textures_JpegParser_parse(whiteout_JpegParser* self, const uint8_t* buffer, size_t buffer_size);
/* @return true if the last parse produced any issues. */
int32_t whiteout_textures_JpegParser_hasIssues(const whiteout_JpegParser* self);
/* ── JpegWriter ─────────────────────────────────────────────── */

/* Encodes a Texture into JPEG format. */
whiteout_JpegWriter* whiteout_textures_JpegWriter_new(void);
whiteout_JpegWriter* whiteout_textures_JpegWriter_new_quality_pool_progressive(int32_t quality, void* pool, int32_t progressive);
void whiteout_textures_JpegWriter_delete(whiteout_JpegWriter* self);
/* Serialize the texture to a JPEG byte buffer. */
whiteout_Bytes whiteout_textures_JpegWriter_write(whiteout_JpegWriter* self, struct whiteout_Texture* texture);
/* @return true if the last write produced any issues. */
int32_t whiteout_textures_JpegWriter_hasIssues(const whiteout_JpegWriter* self);
/* ── DdsParser ─────────────────────────────────────────────── */

/* Reads a DDS file or byte buffer and decodes it into a Texture. */
whiteout_DdsParser* whiteout_textures_DdsParser_new(void);
void whiteout_textures_DdsParser_delete(whiteout_DdsParser* self);
/* Parse a DDS byte buffer. */
struct whiteout_Texture* whiteout_textures_DdsParser_parse(whiteout_DdsParser* self, const uint8_t* buffer, size_t buffer_size);
/* @return true if the last parse produced any issues. */
int32_t whiteout_textures_DdsParser_hasIssues(const whiteout_DdsParser* self);
/* ── DdsWriter ─────────────────────────────────────────────── */

/* Encodes a Texture into DDS format. */
whiteout_DdsWriter* whiteout_textures_DdsWriter_new(void);
void whiteout_textures_DdsWriter_delete(whiteout_DdsWriter* self);
/* Serialize the texture to a DDS byte buffer. */
whiteout_Bytes whiteout_textures_DdsWriter_write(whiteout_DdsWriter* self, struct whiteout_Texture* texture);
/* @return true if the last write produced any issues. */
int32_t whiteout_textures_DdsWriter_hasIssues(const whiteout_DdsWriter* self);
/* ── BmpParser ─────────────────────────────────────────────── */

/* Reads a BMP file or byte buffer and decodes it into a Texture. */
whiteout_BmpParser* whiteout_textures_BmpParser_new(void);
void whiteout_textures_BmpParser_delete(whiteout_BmpParser* self);
/* Parse a BMP byte buffer. */
struct whiteout_Texture* whiteout_textures_BmpParser_parse(whiteout_BmpParser* self, const uint8_t* buffer, size_t buffer_size);
/* @return true if the last parse produced any issues. */
int32_t whiteout_textures_BmpParser_hasIssues(const whiteout_BmpParser* self);
/* ── BmpWriter ─────────────────────────────────────────────── */

/* Encodes a Texture into BMP format. */
whiteout_BmpWriter* whiteout_textures_BmpWriter_new(void);
void whiteout_textures_BmpWriter_delete(whiteout_BmpWriter* self);
/* Serialize the texture to a BMP byte buffer. */
whiteout_Bytes whiteout_textures_BmpWriter_write(whiteout_BmpWriter* self, struct whiteout_Texture* texture);
/* @return true if the last write produced any issues. */
int32_t whiteout_textures_BmpWriter_hasIssues(const whiteout_BmpWriter* self);
/* ── TgaParser ─────────────────────────────────────────────── */

/* Reads a TGA file or byte buffer and decodes it into a Texture. */
whiteout_TgaParser* whiteout_textures_TgaParser_new(void);
void whiteout_textures_TgaParser_delete(whiteout_TgaParser* self);
/* Parse a TGA byte buffer. */
struct whiteout_Texture* whiteout_textures_TgaParser_parse(whiteout_TgaParser* self, const uint8_t* buffer, size_t buffer_size);
/* @return true if the last parse produced any issues. */
int32_t whiteout_textures_TgaParser_hasIssues(const whiteout_TgaParser* self);
/* ── TgaWriter ─────────────────────────────────────────────── */

/* Encodes a Texture into TGA format. */
whiteout_TgaWriter* whiteout_textures_TgaWriter_new(void);
void whiteout_textures_TgaWriter_delete(whiteout_TgaWriter* self);
/* Serialize the texture to a TGA byte buffer. */
whiteout_Bytes whiteout_textures_TgaWriter_write(whiteout_TgaWriter* self, struct whiteout_Texture* texture);
/* @return true if the last write produced any issues. */
int32_t whiteout_textures_TgaWriter_hasIssues(const whiteout_TgaWriter* self);