bindings/java/src/main/java/whiteout/textures/internal/Native.java


    // -- PngParser --
    public static final MethodHandle whiteout_textures_PngParser_new = find(
        "whiteout_textures_PngParser_new", FunctionDescriptor.of(ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_textures_PngParser_delete = find(
        "whiteout_textures_PngParser_delete", FunctionDescriptor.ofVoid(ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_textures_PngParser_parse = find(
        "whiteout_textures_PngParser_parse", FunctionDescriptor.of(ValueLayout.ADDRESS, ValueLayout.ADDRESS, ValueLayout.ADDRESS, ValueLayout.JAVA_LONG));
    public static final MethodHandle whiteout_textures_PngParser_hasIssues = find(
        "whiteout_textures_PngParser_hasIssues", FunctionDescriptor.of(ValueLayout.JAVA_INT, ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_textures_PngParser_isAnimated = find(
        "whiteout_textures_PngParser_isAnimated", FunctionDescriptor.of(ValueLayout.JAVA_INT, ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_textures_PngParser_frameCount = find(
        "whiteout_textures_PngParser_frameCount", FunctionDescriptor.of(ValueLayout.JAVA_INT, ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_textures_PngParser_loopCount = find(
        "whiteout_textures_PngParser_loopCount", FunctionDescriptor.of(ValueLayout.JAVA_INT, ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_textures_PngParser_frame = find(
        "whiteout_textures_PngParser_frame", FunctionDescriptor.of(ValueLayout.ADDRESS, ValueLayout.ADDRESS, ValueLayout.JAVA_INT));
    public static final MethodHandle whiteout_textures_PngParser_frameDelayMs = find(
        "whiteout_textures_PngParser_frameDelayMs", FunctionDescriptor.of(ValueLayout.JAVA_INT, ValueLayout.ADDRESS, ValueLayout.JAVA_INT));
    public static final MethodHandle whiteout_textures_PngParser_frameInfo = find(
        "whiteout_textures_PngParser_frameInfo", FunctionDescriptor.of(ValueLayout.ADDRESS, ValueLayout.ADDRESS, ValueLayout.JAVA_INT));

    // -- PngApngFrame --
    public static final MethodHandle whiteout_textures_PngApngFrame_new = find(
        "whiteout_textures_PngApngFrame_new", FunctionDescriptor.of(ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_textures_PngApngFrame_delete = find(
        "whiteout_textures_PngApngFrame_delete", FunctionDescriptor.ofVoid(ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_textures_PngApngFrame_get_image = find("whiteout_textures_PngApngFrame_get_image", FunctionDescriptor.of(ValueLayout.ADDRESS, ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_textures_PngApngFrame_set_image = find("whiteout_textures_PngApngFrame_set_image", FunctionDescriptor.ofVoid(ValueLayout.ADDRESS, ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_textures_PngApngFrame_get_delayMs = find("whiteout_textures_PngApngFrame_get_delayMs", FunctionDescriptor.of(ValueLayout.JAVA_INT, ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_textures_PngApngFrame_set_delayMs = find("whiteout_textures_PngApngFrame_set_delayMs", FunctionDescriptor.ofVoid(ValueLayout.ADDRESS, ValueLayout.JAVA_INT));

    // -- PngApngSaveOptions --
    public static final MethodHandle whiteout_textures_PngApngSaveOptions_new = find(
        "whiteout_textures_PngApngSaveOptions_new", FunctionDescriptor.of(ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_textures_PngApngSaveOptions_delete = find(
        "whiteout_textures_PngApngSaveOptions_delete", FunctionDescriptor.ofVoid(ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_textures_PngApngSaveOptions_get_loopCount = find("whiteout_textures_PngApngSaveOptions_get_loopCount", FunctionDescriptor.of(ValueLayout.JAVA_INT, ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_textures_PngApngSaveOptions_set_loopCount = find("whiteout_textures_PngApngSaveOptions_set_loopCount", FunctionDescriptor.ofVoid(ValueLayout.ADDRESS, ValueLayout.JAVA_INT));

    // -- PngWriter --
    public static final MethodHandle whiteout_textures_PngWriter_new = find(
        "whiteout_textures_PngWriter_new", FunctionDescriptor.of(ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_textures_PngWriter_delete = find(
        "whiteout_textures_PngWriter_delete", FunctionDescriptor.ofVoid(ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_textures_PngWriter_write = find(
        "whiteout_textures_PngWriter_write", FunctionDescriptor.of(BYTES_LAYOUT, ValueLayout.ADDRESS, ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_textures_PngWriter_writeAnimated = find(
        "whiteout_textures_PngWriter_writeAnimated", FunctionDescriptor.of(BYTES_LAYOUT, ValueLayout.ADDRESS, ValueLayout.ADDRESS, ValueLayout.JAVA_LONG, ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_textures_PngWriter_hasIssues = find(
        "whiteout_textures_PngWriter_hasIssues", FunctionDescriptor.of(ValueLayout.JAVA_INT, ValueLayout.ADDRESS));

    // -- JpegParser --
    public static final MethodHandle whiteout_textures_JpegParser_new = find(
        "whiteout_textures_JpegParser_new", FunctionDescriptor.of(ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_textures_JpegParser_new_pool = find(
        "whiteout_textures_JpegParser_new_pool", FunctionDescriptor.of(ValueLayout.ADDRESS, ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_textures_JpegParser_delete = find(
        "whiteout_textures_JpegParser_delete", FunctionDescriptor.ofVoid(ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_textures_JpegParser_parse = find(
        "whiteout_textures_JpegParser_parse", FunctionDescriptor.of(ValueLayout.ADDRESS, ValueLayout.ADDRESS, ValueLayout.ADDRESS, ValueLayout.JAVA_LONG));
    public static final MethodHandle whiteout_textures_JpegParser_hasIssues = find(
        "whiteout_textures_JpegParser_hasIssues", FunctionDescriptor.of(ValueLayout.JAVA_INT, ValueLayout.ADDRESS));

    // -- JpegWriter --
    public static final MethodHandle whiteout_textures_JpegWriter_new = find(
        "whiteout_textures_JpegWriter_new", FunctionDescriptor.of(ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_textures_JpegWriter_new_quality_pool_progressive = find(
        "whiteout_textures_JpegWriter_new_quality_pool_progressive", FunctionDescriptor.of(ValueLayout.ADDRESS, ValueLayout.JAVA_INT, ValueLayout.ADDRESS, ValueLayout.JAVA_BYTE));
    public static final MethodHandle whiteout_textures_JpegWriter_delete = find(
        "whiteout_textures_JpegWriter_delete", FunctionDescriptor.ofVoid(ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_textures_JpegWriter_write = find(
        "whiteout_textures_JpegWriter_write", FunctionDescriptor.of(BYTES_LAYOUT, ValueLayout.ADDRESS, ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_textures_JpegWriter_hasIssues = find(
        "whiteout_textures_JpegWriter_hasIssues", FunctionDescriptor.of(ValueLayout.JAVA_INT, ValueLayout.ADDRESS));

    // -- DdsParser --
    public static final MethodHandle whiteout_textures_DdsParser_new = find(
        "whiteout_textures_DdsParser_new", FunctionDescriptor.of(ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_textures_DdsParser_delete = find(
        "whiteout_textures_DdsParser_delete", FunctionDescriptor.ofVoid(ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_textures_DdsParser_parse = find(
        "whiteout_textures_DdsParser_parse", FunctionDescriptor.of(ValueLayout.ADDRESS, ValueLayout.ADDRESS, ValueLayout.ADDRESS, ValueLayout.JAVA_LONG));
    public static final MethodHandle whiteout_textures_DdsParser_hasIssues = find(
        "whiteout_textures_DdsParser_hasIssues", FunctionDescriptor.of(ValueLayout.JAVA_INT, ValueLayout.ADDRESS));

    // -- DdsWriter --
    public static final MethodHandle whiteout_textures_DdsWriter_new = find(
        "whiteout_textures_DdsWriter_new", FunctionDescriptor.of(ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_textures_DdsWriter_delete = find(
        "whiteout_textures_DdsWriter_delete", FunctionDescriptor.ofVoid(ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_textures_DdsWriter_write = find(
        "whiteout_textures_DdsWriter_write", FunctionDescriptor.of(BYTES_LAYOUT, ValueLayout.ADDRESS, ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_textures_DdsWriter_hasIssues = find(
        "whiteout_textures_DdsWriter_hasIssues", FunctionDescriptor.of(ValueLayout.JAVA_INT, ValueLayout.ADDRESS));

    // -- BmpParser --
    public static final MethodHandle whiteout_textures_BmpParser_new = find(
        "whiteout_textures_BmpParser_new", FunctionDescriptor.of(ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_textures_BmpParser_delete = find(
        "whiteout_textures_BmpParser_delete", FunctionDescriptor.ofVoid(ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_textures_BmpParser_parse = find(
        "whiteout_textures_BmpParser_parse", FunctionDescriptor.of(ValueLayout.ADDRESS, ValueLayout.ADDRESS, ValueLayout.ADDRESS, ValueLayout.JAVA_LONG));
    public static final MethodHandle whiteout_textures_BmpParser_hasIssues = find(
        "whiteout_textures_BmpParser_hasIssues", FunctionDescriptor.of(ValueLayout.JAVA_INT, ValueLayout.ADDRESS));

    // -- BmpWriter --
    public static final MethodHandle whiteout_textures_BmpWriter_new = find(
        "whiteout_textures_BmpWriter_new", FunctionDescriptor.of(ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_textures_BmpWriter_delete = find(
        "whiteout_textures_BmpWriter_delete", FunctionDescriptor.ofVoid(ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_textures_BmpWriter_write = find(
        "whiteout_textures_BmpWriter_write", FunctionDescriptor.of(BYTES_LAYOUT, ValueLayout.ADDRESS, ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_textures_BmpWriter_hasIssues = find(
        "whiteout_textures_BmpWriter_hasIssues", FunctionDescriptor.of(ValueLayout.JAVA_INT, ValueLayout.ADDRESS));

    // -- TgaParser --
    public static final MethodHandle whiteout_textures_TgaParser_new = find(
        "whiteout_textures_TgaParser_new", FunctionDescriptor.of(ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_textures_TgaParser_delete = find(
        "whiteout_textures_TgaParser_delete", FunctionDescriptor.ofVoid(ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_textures_TgaParser_parse = find(
        "whiteout_textures_TgaParser_parse", FunctionDescriptor.of(ValueLayout.ADDRESS, ValueLayout.ADDRESS, ValueLayout.ADDRESS, ValueLayout.JAVA_LONG));
    public static final MethodHandle whiteout_textures_TgaParser_hasIssues = find(
        "whiteout_textures_TgaParser_hasIssues", FunctionDescriptor.of(ValueLayout.JAVA_INT, ValueLayout.ADDRESS));

    // -- TgaWriter --
    public static final MethodHandle whiteout_textures_TgaWriter_new = find(
        "whiteout_textures_TgaWriter_new", FunctionDescriptor.of(ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_textures_TgaWriter_delete = find(
        "whiteout_textures_TgaWriter_delete", FunctionDescriptor.ofVoid(ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_textures_TgaWriter_write = find(
        "whiteout_textures_TgaWriter_write", FunctionDescriptor.of(BYTES_LAYOUT, ValueLayout.ADDRESS, ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_textures_TgaWriter_hasIssues = find(
        "whiteout_textures_TgaWriter_hasIssues", FunctionDescriptor.of(ValueLayout.JAVA_INT, ValueLayout.ADDRESS));
